Fixed gutter changes on mobile resize

--- a/style.less
+++ b/style.less
@@ -264,6 +264,8 @@ img{width: 100%;}
 /* ------------------------------------------------------------------------- */
 @media only screen and (min-width: 861px) and (max-width: 1040px) {
 	.content{background-color: blue;}	
+	.grid{float:left; margin: 1.2% 2% 0 0;}
+
 }
 
 
@@ -272,6 +274,7 @@ img{width: 100%;}
 /* ------------------------------------------------------------------------- */
 @media only screen and (min-width: 640px) and (max-width: 860px) {
 	.content{background-color: aqua;}
+	.grid{float:left; margin: 1.5% 2% 0 0;}
 }
 
 
@@ -288,10 +291,13 @@ img{width: 100%;}
 /* ------------------------------------------------------------------------- */
 @media only screen and (max-width: 639px) {
 	.content{background-color:  #b10425;}
+	.grid{float:left; margin: 2% 3% 0 0;} 
 	.pad{padding: 0 2.5% 0 2.5%;}
 	@full: 100%;
+	.half{width: 48%;}
+	.one-third{width: 31%;}
 	.one-fourth{width:@full;}
-	.two-fourth{width:@half;}
+	.two-fourth{width: 48%;}
 	.three-fourth{width:@full;}
 	.one-fifth{width:@full;}
 	.two-fifth{width:@full;}
